--- a/net-45/Hiwjcn.SocketServer/App.config
+++ b/net-45/Hiwjcn.SocketServer/App.config
@@ -1,105 +1,105 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 
   <configSections>
     <!--注册日志组件-->
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
   <!--注册日志组件-->
   <log4net debug="false">
     <!--按日志容量分割日志文件 10KB一个-->
     <appender name="LogFileAppenderBySize" type="log4net.Appender.RollingFileAppender">
       <!--是否续写-->
-      <param name="AppendToFile" value="true"/>
+      <param name="AppendToFile" value="true" />
       <!--最小锁定模型以允许多个进程可以写入同一个文件-->
-      <param name="LockingModel" value="log4net.Appender.FileAppender.MinimalLock"/>
-      <param name="StaticLogFileName" value="true"/>
+      <param name="LockingModel" value="log4net.Appender.FileAppender.MinimalLock" />
+      <param name="StaticLogFileName" value="true" />
       <!--按照文件的大小进行变换日志文件-->
-      <param name="RollingStyle" value="Size"/>
+      <param name="RollingStyle" value="Size" />
       <!--文件的保存位置-->
-      <param name="File" value="App_Data\\Log\\LogFile.txt"/>
+      <param name="File" value="App_Data\\Log\\LogFile.txt" />
       <!--单个文件最大数量 好像只有在 按Size分割时有效-->
-      <param name="MaximumFileSize" value="200KB"/>
+      <param name="MaximumFileSize" value="200KB" />
       <!--保留的log文件数量 超过此数量后 自动删除之前的   好像只有在 按Size分割时有效-->
-      <param name="MaxSizeRollBackups" value="300"/>
+      <param name="MaxSizeRollBackups" value="300" />
       <layout type="log4net.Layout.PatternLayout">
-        <param name="ConversionPattern" value="发生时间:%d %n事件级别:%level %n相关类名:%c%n程序文件:%F 第%L行%n日志内容:%m%n-----------------------------------------%n%n"/>
+        <param name="ConversionPattern" value="发生时间:%d %n事件级别:%level %n相关类名:%c%n程序文件:%F 第%L行%n日志内容:%m%n-----------------------------------------%n%n" />
       </layout>
     </appender>
     <root>
-      <level value="ERROR"/>
+      <level value="ERROR" />
       <!--启用按日期分割-->
       <!--<appender-ref ref="LogFileAppenderByDate" />-->
       <!--启用按容量分割-->
-      <appender-ref ref="LogFileAppenderBySize"/>
+      <appender-ref ref="LogFileAppenderBySize" />
       <!--启用保存到数据库-->
       <!--<appender-ref ref="AdoNetAppender" />-->
     </root>
   </log4net>
   <appSettings>
-    <add key="CookieDomain" value=""/>
+    <add key="CookieDomain" value="" />
     <!--允许跨域ajax的域名-->
-    <add key="Origin_Allow" value=""/>
+    <add key="Origin_Allow" value="" />
 
     <!--域名用逗号隔开-->
-    <add key="AllowDomains" value=""/>
+    <add key="AllowDomains" value="" />
 
-    <add key="SmptServer" value="smtp.epcservices.com.cn"/>
-    <add key="SmptLoginName" value="reception@epcservices.com.cn"/>
-    <add key="SmptPassWord" value="Colin5215"/>
-    <add key="SmptSenderName" value="EPC_WEBSITE"/>
-    <add key="SmptEmailAddress" value="reception@epcservices.com.cn"/>
+    <add key="SmptServer" value="smtp.epcservices.com.cn" />
+    <add key="SmptLoginName" value="reception@epcservices.com.cn" />
+    <add key="SmptPassWord" value="Colin5215" />
+    <add key="SmptSenderName" value="EPC_WEBSITE" />
+    <add key="SmptEmailAddress" value="reception@epcservices.com.cn" />
 
-    <add key="FeedBackEmail" value="reception@epcservices.com.cn"/>
-    <add key="KeepAliveUrl" value="http://colin.hiwj.cn/ "/>
+    <add key="FeedBackEmail" value="reception@epcservices.com.cn" />
+    <add key="KeepAliveUrl" value="http://colin.hiwj.cn/ " />
 
-    <add key="SSOLoginUrl" value="http://localhost/account/login/"/>
-    <add key="SSOLogoutUrl" value="http://localhost/account/logoutsso/"/>
-    <add key="CheckLoginInfoUrl" value="http://localhost/account/CheckChildSiteToken/"/>
+    <add key="SSOLoginUrl" value="http://localhost/account/login/" />
+    <add key="SSOLogoutUrl" value="http://localhost/account/logoutsso/" />
+    <add key="CheckLoginInfoUrl" value="http://localhost/account/CheckChildSiteToken/" />
 
-    <add key="CallBackUrl" value="Account/GetCallBackResult/"/>
-    <add key="DefaultRedirectUrl" value="Page/Home/"/>
+    <add key="CallBackUrl" value="Account/GetCallBackResult/" />
+    <add key="DefaultRedirectUrl" value="Page/Home/" />
 
-    <add key="QiniuAccessKey" value="IJ0GgfyMaCR_k-4yOVX6Ji_LImhMxjcnvOz2zBNP"/>
-    <add key="QiniuSecretKey" value="Kk5-w2nxc1b_MpjhC4ocPr9jfK36O11vaGVEY6hD"/>
-    <add key="QiniuBucketName" value="hiwjcn"/>
-    <add key="QiniuBaseUrl" value="http://hiwjcn.qiniudn.com/"/>
+    <add key="QiniuAccessKey" value="IJ0GgfyMaCR_k-4yOVX6Ji_LImhMxjcnvOz2zBNP" />
+    <add key="QiniuSecretKey" value="Kk5-w2nxc1b_MpjhC4ocPr9jfK36O11vaGVEY6hD" />
+    <add key="QiniuBucketName" value="hiwjcn" />
+    <add key="QiniuBaseUrl" value="http://hiwjcn.qiniudn.com/" />
 
     <!--1年-->
-    <add key="CookieExpiresMinutes" value="525600"/>
-    <add key="CacheExpiresMinutes" value="5"/>
+    <add key="CookieExpiresMinutes" value="525600" />
+    <add key="CacheExpiresMinutes" value="5" />
   </appSettings>
   <connectionStrings>
-    <add name="MySqlConnectionString" connectionString="Database=hiwjcn;Data Source=127.0.0.1;Port=3306;CharacterSet=utf8;User Id=root;Password=123"/>
-    <add name="RedisConnectionString" connectionString="172.16.26.28:6379,password=1q2w3e4r5T"/>
+    <add name="MySqlConnectionString" connectionString="Database=hiwjcn;Data Source=127.0.0.1;Port=3306;CharacterSet=utf8;User Id=root;Password=123" />
+    <add name="RedisConnectionString" connectionString="172.16.26.28:6379,password=1q2w3e4r5T" />
   </connectionStrings>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
   </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0"/>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0"/>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-3.5.0.0" newVersion="3.5.0.0"/>
+        <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.5.0.0" newVersion="3.5.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-2.0.8.0" newVersion="2.0.8.0"/>
+        <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.8.0" newVersion="2.0.8.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.data>
     <DbProviderFactories>
-      <remove invariant="MySql.Data.MySqlClient"/>
-      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"/>
+      <remove invariant="MySql.Data.MySqlClient" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
     </DbProviderFactories>
   </system.data>
 </configuration>
