--- a/net-45/Hiwjcn.Web/packages.config
+++ b/net-45/Hiwjcn.Web/packages.config
@@ -35,11 +35,15 @@
   <package id="SharpRaven.Log4Net" version="1.5.2" targetFramework="net45" />
   <package id="StackExchange.Redis.StrongName" version="1.2.1" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net45" />
-  <package id="System.Net.Http" version="2.0.20126.16343" targetFramework="net45" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net462" />
   <package id="System.Net.Http.Formatting.Extension" version="5.2.3.0" targetFramework="net45" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net462" />
   <package id="System.Reflection.TypeExtensions" version="4.3.0" targetFramework="net462" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net462" />
-  <package id="System.ValueTuple" version="4.3.1" targetFramework="net45" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net462" />
 </packages>
