--- a/net-45/Hiwjcn.Service/packages.config
+++ b/net-45/Hiwjcn.Service/packages.config
@@ -21,11 +21,13 @@
   <package id="Qiniu.Shared" version="7.2.15" targetFramework="net45" />
   <package id="Quartz" version="3.0.3" targetFramework="net462" />
   <package id="StackExchange.Redis" version="1.2.6" targetFramework="net45" requireReinstallation="true" />
-  <package id="System.Net.Http" version="4.3.3" targetFramework="net45" requireReinstallation="true" />
-  <package id="System.Net.Http.Formatting.Extension" version="5.2.3.0" targetFramework="net45" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net462" />
   <package id="System.Reflection.TypeExtensions" version="4.3.0" targetFramework="net462" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net462" />
 </packages>
