--- a/net-45/Hiwjcn.Test/packages.config
+++ b/net-45/Hiwjcn.Test/packages.config
@@ -27,7 +27,6 @@
   <package id="StackExchange.Redis" version="1.2.6" targetFramework="net45" requireReinstallation="true" />
   <package id="StringTemplate4" version="4.0.8" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net45" requireReinstallation="true" />
-  <package id="System.Net.Http" version="4.3.3" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Reactive" version="3.1.1" targetFramework="net45" />
   <package id="System.Reactive.Core" version="3.1.1" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Reactive.Interfaces" version="3.1.1" targetFramework="net45" />
@@ -36,6 +35,10 @@
   <package id="System.Reactive.Windows.Threading" version="3.1.1" targetFramework="net45" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net45" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net462" />
   <package id="ZooKeeperNetEx" version="3.4.10.1" targetFramework="net45" />
 </packages>
