--- a/net-45/Lib.extra/packages.config
+++ b/net-45/Lib.extra/packages.config
@@ -10,5 +10,9 @@
   <package id="Polly" version="5.8.0" targetFramework="net462" />
   <package id="Qiniu.Shared" version="7.2.15" targetFramework="net452" />
   <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net462" />
 </packages>
