--- a/net-45/Lib/packages.config
+++ b/net-45/Lib/packages.config
@@ -15,6 +15,8 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.CSharp" version="4.4.0" targetFramework="net45" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="2.0.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="2.0.1" targetFramework="net462" />
   <package id="Microsoft.Extensions.Configuration" version="2.0.1" targetFramework="net462" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.0.1" targetFramework="net462" />
   <package id="Microsoft.Extensions.DependencyInjection" version="2.0.0" targetFramework="net462" />
@@ -24,6 +26,7 @@
   <package id="Microsoft.Extensions.Options" version="2.0.1" targetFramework="net462" />
   <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net462" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Microsoft.Win32.Primitives" version="4.0.1" targetFramework="net462" />
   <package id="MongoDB.Bson" version="2.4.4" targetFramework="net45" />
   <package id="MongoDB.Driver" version="2.4.4" targetFramework="net45" />
   <package id="MongoDB.Driver.Core" version="2.4.4" targetFramework="net45" />
@@ -36,11 +39,15 @@
   <package id="SharpZipLib" version="0.86.0" targetFramework="net45" />
   <package id="StackExchange.Redis" version="1.2.6" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net45" requireReinstallation="true" />
-  <package id="System.Net.Http" version="4.3.3" targetFramework="net45" requireReinstallation="true" />
-  <package id="System.Net.Http.Formatting.Extension" version="5.2.3.0" targetFramework="net45" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.0.0" targetFramework="net462" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net462" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net462" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net45" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net462" />
   <package id="ZooKeeperNetEx" version="3.4.10.1" targetFramework="net45" />
   <package id="ZXing.Net" version="0.16.2" targetFramework="net45" requireReinstallation="true" />
