--- a/net-45/Hiwjcn.Framework/packages.config
+++ b/net-45/Hiwjcn.Framework/packages.config
@@ -11,6 +11,8 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.CSharp" version="4.4.0" targetFramework="net45" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="2.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net462" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Microsoft.Win32.Primitives" version="4.0.1" targetFramework="net462" />
   <package id="MySql.Data" version="6.9.10" targetFramework="net45" />
