--- a/net-45/Hiwjcn.Web/packages.config
+++ b/net-45/Hiwjcn.Web/packages.config
@@ -20,6 +20,8 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.zh-Hans" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.CSharp" version="4.4.0" targetFramework="net45" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="2.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net462" />
   <package id="Microsoft.Net.Compilers" version="2.3.1" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.RedisSessionStateProvider" version="2.2.5" targetFramework="net45" />
