--- a/net-45/Hiwjcn.Framework/Hiwjcn.Framework.csproj
+++ b/net-45/Hiwjcn.Framework/Hiwjcn.Framework.csproj
@@ -163,7 +163,7 @@
     <Compile Include="DataBaseInitData.cs" />
     <Compile Include="EpcBaseController.cs" />
     <Compile Include="Factory\ActorsFactory.cs" />
-    <Compile Include="Provider\AuthApiService.cs" />
+    <Compile Include="Provider\AuthApiProvider.cs" />
     <Compile Include="Tasks\CleanDatabaseTask.cs" />
     <Compile Include="Tasks\ClearExpiredTokenTask.cs" />
     <Compile Include="Tasks\ClearRequestLogTask.cs" />
