--- a/net-45/Hiwjcn.Framework/packages.config
+++ b/net-45/Hiwjcn.Framework/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Akka" version="1.3.2" targetFramework="net45" />
   <package id="Autofac" version="4.6.2" targetFramework="net45" />
+  <package id="AutoMapper" version="6.2.2" targetFramework="net462" />
   <package id="Common.Logging" version="3.4.1" targetFramework="net45" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net45" />
   <package id="Dapper" version="1.50.2" targetFramework="net45" requireReinstallation="true" />
