--- a/net-45/WindowsFormApp/packages.config
+++ b/net-45/WindowsFormApp/packages.config
@@ -32,7 +32,7 @@
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Linq" version="4.3.0" targetFramework="net45" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net45" />
-  <package id="System.Net.Http" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net462" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net45" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net45" />
   <package id="System.Reactive" version="3.1.1" targetFramework="net45" />
@@ -50,6 +50,10 @@
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net45" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net45" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net462" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net45" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net45" />
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net45" />
