--- a/net-45/ConsoleApp/packages.config
+++ b/net-45/ConsoleApp/packages.config
@@ -16,7 +16,12 @@
   <package id="RabbitMQ.Client" version="4.1.3" targetFramework="net462" />
   <package id="SuperSocket" version="1.6.6.1" targetFramework="net45" />
   <package id="SuperSocket.WebSocket" version="1.6.6.1" targetFramework="net45" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net462" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.3.1" targetFramework="net45" />
   <package id="ZooKeeperNetEx" version="3.4.10.1" targetFramework="net45" />
 </packages>
