--- a/net-45/Lib/Lib.csproj
+++ b/net-45/Lib/Lib.csproj
@@ -283,6 +283,7 @@
     <Compile Include="distributed\zookeeper\ServiceManager\ServiceSubscribe.cs" />
     <Compile Include="distributed\zookeeper\ServiceManager\ServiceSubscribeBase.cs" />
     <Compile Include="distributed\zookeeper\watcher\CallBackWatcher.cs" />
+    <Compile Include="distributed\zookeeper\watcher\ConnectionStatusWatcher.cs" />
     <Compile Include="distributed\zookeeper\watcher\EmptyWatcher.cs" />
     <Compile Include="distributed\zookeeper\watcher\NodeMonitorWatcher.cs" />
     <Compile Include="distributed\zookeeper\watcher\ReconnectionWatcher.cs" />
