--- a/net-45/Hiwjcn.Web/Web.config
+++ b/net-45/Hiwjcn.Web/Web.config
@@ -27,14 +27,14 @@
       </factoryAdapter>
     </logging>
   </common>
-  <lib_rabbitmq HostName="mq.qipeilong.net" UserName="admin" Password="mypass" VirtualHost="/" />
-  <lib_zookeeper SessionTimeOut="5000" Server="zk.qipeilong.net" MasterSlavePath="/" DistributedLockPath="/lock" />
+  <lib_rabbitmq HostName="172.16.232.220" UserName="admin" Password="mypass" VirtualHost="/" />
+  <lib_zookeeper SessionTimeOut="5000" Server="172.16.232.224" MasterSlavePath="/" DistributedLockPath="/lock" />
   <connectionStrings>
     <add name="member_ship" connectionString="database=member;server=127.0.0.1;port=3306;characterset=utf8;user id=root;password=123;connectiontimeout=3" />
     <add name="epc" connectionString="database=epc;server=127.0.0.1;port=3306;characterset=utf8;user id=root;password=123;connectiontimeout=3" />
 
-    <add name="RedisConnectionString_" connectionString="redis.qipeilong.net:6479" />
-    <add name="ES" connectionString="http://es.qipeilong.net:9200/" />
+    <add name="RedisConnectionString_" connectionString="172.16.232.224:6479" />
+    <add name="ES" connectionString="http://172.16.232.221:9200/" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -93,7 +93,7 @@
         <!-- https://github.com/Azure/aspnet-redis-providers/wiki -->
         <!-- https://www.nuget.org/packages/Microsoft.Web.RedisSessionStateProvider/ -->
         <!-- https://docs.microsoft.com/en-us/azure/redis-cache/cache-aspnet-session-state-provider -->
-        <add name="RedisSessionProvider" type="Microsoft.Web.Redis.RedisSessionStateProvider" connectionString="redis.qipeilong.net:6479" applicationName="auth_server" databaseId="9" />
+        <add name="RedisSessionProvider" type="Microsoft.Web.Redis.RedisSessionStateProvider" connectionString="172.16.232.224:6479" applicationName="auth_server" databaseId="9" />
       </providers>
     </sessionState>
   </system.web>
