--- a/net-45/ConsoleApp/App.config
+++ b/net-45/ConsoleApp/App.config
@@ -6,55 +6,12 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <!--注册日志组件-->
-  <log4net debug="false">
-    <!--按日志容量分割日志文件 10KB一个-->
-    <appender name="LogFileAppenderBySize" type="log4net.Appender.RollingFileAppender">
-      <!--是否续写-->
-      <param name="AppendToFile" value="true" />
-      <!--最小锁定模型以允许多个进程可以写入同一个文件-->
-      <param name="LockingModel" value="log4net.Appender.FileAppender.MinimalLock" />
-      <param name="StaticLogFileName" value="true" />
-      <!--按照文件的大小进行变换日志文件-->
-      <param name="RollingStyle" value="Size" />
-      <!--文件的保存位置-->
-      <param name="File" value="App_Data\\Log\\LogFile.txt" />
-      <!--单个文件最大数量 好像只有在 按Size分割时有效-->
-      <param name="MaximumFileSize" value="200KB" />
-      <!--保留的log文件数量 超过此数量后 自动删除之前的   好像只有在 按Size分割时有效-->
-      <param name="MaxSizeRollBackups" value="300" />
-      <layout type="log4net.Layout.PatternLayout">
-        <param name="ConversionPattern" value="发生时间:%d %n事件级别:%level %n相关类名:%c%n程序文件:%F 第%L行%n日志内容:%m%n-----------------------------------------%n%n" />
-      </layout>
-    </appender>
-    <root>
-      <level value="ERROR" />
-      <!--启用按日期分割-->
-      <!--<appender-ref ref="LogFileAppenderByDate" />-->
-      <!--启用按容量分割-->
-      <appender-ref ref="LogFileAppenderBySize" />
-      <!--启用保存到数据库-->
-      <!--<appender-ref ref="AdoNetAppender" />-->
-    </root>
-  </log4net>
   <appSettings>
     <add key="CookieDomain" value="" />
     <!--允许跨域ajax的域名-->
     <add key="Origin_Allow" value="" />
     <!--域名用逗号隔开-->
     <add key="AllowDomains" value="" />
-    <add key="SmptServer" value="smtp.epcservices.com.cn" />
-    <add key="SmptLoginName" value="reception@epcservices.com.cn" />
-    <add key="SmptPassWord" value="Colin5215" />
-    <add key="SmptSenderName" value="EPC_WEBSITE" />
-    <add key="SmptEmailAddress" value="reception@epcservices.com.cn" />
-    <add key="FeedBackEmail" value="reception@epcservices.com.cn" />
-    <add key="KeepAliveUrl" value="http://colin.hiwj.cn/ " />
-    <add key="SSOLoginUrl" value="http://localhost/account/login/" />
-    <add key="SSOLogoutUrl" value="http://localhost/account/logoutsso/" />
-    <add key="CheckLoginInfoUrl" value="http://localhost/account/CheckChildSiteToken/" />
-    <add key="CallBackUrl" value="Account/GetCallBackResult/" />
-    <add key="DefaultRedirectUrl" value="Page/Home/" />
     <add key="QiniuAccessKey" value="IJ0GgfyMaCR_k-4yOVX6Ji_LImhMxjcnvOz2zBNP" />
     <add key="QiniuSecretKey" value="Kk5-w2nxc1b_MpjhC4ocPr9jfK36O11vaGVEY6hD" />
     <add key="QiniuBucketName" value="hiwjcn" />
@@ -64,11 +21,11 @@
     <add key="CacheExpiresMinutes" value="5" />
   </appSettings>
   <connectionStrings>
-    <add name="db_" connectionString="database=hiwjcn_auth;server=127.0.0.1;port=3306;characterset=utf8;user id=root;password=123;connectiontimeout=3" />
-    <add name="db_sso" connectionString="User ID=sa;Initial Catalog=parties_sso;Data Source=db.qipeilong.net;Password=1q2w3e4r5T;Connect Timeout=20" />
-    <add name="db" connectionString="User ID=sa;Initial Catalog=auth_test;Data Source=db.qipeilong.net;Password=1q2w3e4r5T;Connect Timeout=20" />
-    <add name="RedisConnectionString" connectionString="redis.qipeilong.net:6479" />
-    <add name="ES" connectionString="http://es.qipeilong.net:9200/" />
+    <add name="db_" connectionString="" />
+    <add name="db_sso" connectionString="" />
+    <add name="db" connectionString="" />
+    <add name="RedisConnectionString" connectionString="" />
+    <add name="ES" connectionString="" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
