--- a/net-45/Hiwjcn.Test/app.config
+++ b/net-45/Hiwjcn.Test/app.config
@@ -3,11 +3,10 @@
   <configSections>
     <section name="lib_zookeeper" type="Lib.distributed.ZooKeeperConfigSection,Lib" />
     <section name="rabbitmq" type="Lib.mq.RabbitMQSection,Lib" />
-    
+
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
-  <rabbitmq HostName="172.16.42.29" UserName="admin" Password="mypass" VirtualHost="/" />
-  <lib_zookeeper SessionTimeOut="500000" Server="es.qipeilong.net:2181" MasterSlavePath="/" DistributedLockPath="/lock" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -124,7 +123,7 @@
       <endpoint address="http://localhost:88/OrderService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IAddService" contract="QPL.WebService.Order.Core.IOrderService" name="BasicHttpBinding_IAddService" />
     </client>
   </system.serviceModel>
-  
+
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -135,9 +134,13 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<system.data>
+  <system.data>
     <DbProviderFactories>
       <remove invariant="MySql.Data.MySqlClient" />
       <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.10.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
     </DbProviderFactories>
-  </system.data><startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" /></startup></configuration>
+  </system.data>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
+  </startup>
+</configuration>
