--- a/net-45/Lib/packages.config
+++ b/net-45/Lib/packages.config
@@ -50,5 +50,5 @@
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net462" />
   <package id="ZooKeeperNetEx" version="3.4.10.1" targetFramework="net45" />
-  <package id="ZXing.Net" version="0.16.2" targetFramework="net45" requireReinstallation="true" />
+  <package id="ZXing.Net" version="0.16.4" targetFramework="net462" />
 </packages>
