--- a/net-core/Lib.akka/Lib.akka.csproj
+++ b/net-core/Lib.akka/Lib.akka.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Akka" Version="1.3.8" />
+  </ItemGroup>
+
 </Project>
