--- a/net-core/Lib.orleans/Lib.orleans.csproj
+++ b/net-core/Lib.orleans/Lib.orleans.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Orleans.OrleansHost" Version="1.5.4" />
+  </ItemGroup>
+
 </Project>
