--- a/net-core/Lib.rabbitmq/Lib.rabbitmq.csproj
+++ b/net-core/Lib.rabbitmq/Lib.rabbitmq.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="RabbitMQ.Client" Version="5.1.0" />
+  </ItemGroup>
+
 </Project>
