--- a/net-core/Lib.redis/Lib.redis.csproj
+++ b/net-core/Lib.redis/Lib.redis.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="StackExchange.Redis" Version="1.2.6" />
+  </ItemGroup>
+
 </Project>
