--- a/net-core/Lib.rpc/Lib.rpc.csproj
+++ b/net-core/Lib.rpc/Lib.rpc.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.ServiceModel.Primitives" Version="4.5.3" />
+  </ItemGroup>
+
 </Project>
