--- a/net-core/Lib.redis/Lib.redis.csproj
+++ b/net-core/Lib.redis/Lib.redis.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="StackExchange.Redis" Version="1.2.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Lib\Lib.csproj" />
+  </ItemGroup>
+
 </Project>
