--- a/net-core/Lib.autofac/Lib.autofac.csproj
+++ b/net-core/Lib.autofac/Lib.autofac.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Akka" Version="1.3.8" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.2" />
   </ItemGroup>
 
   <ItemGroup>
