--- a/net-core/Lib.elasticsearch/Lib.elasticsearch.csproj
+++ b/net-core/Lib.elasticsearch/Lib.elasticsearch.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="NEST" Version="6.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Lib\Lib.csproj" />
+  </ItemGroup>
+
 </Project>
