--- a/net-core/Lib.netty/Lib.netty.csproj
+++ b/net-core/Lib.netty/Lib.netty.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="DotNetty.Handlers" Version="0.4.8" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Lib\Lib.csproj" />
+  </ItemGroup>
+
 </Project>
