--- a/net-core/Lib.orleans/Lib.orleans.csproj
+++ b/net-core/Lib.orleans/Lib.orleans.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.Orleans.OrleansHost" Version="1.5.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Lib\Lib.csproj" />
+  </ItemGroup>
+
 </Project>
