--- a/net-core/Lib.rpc/Lib.rpc.csproj
+++ b/net-core/Lib.rpc/Lib.rpc.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="System.ServiceModel.Primitives" Version="4.5.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Lib\Lib.csproj" />
+  </ItemGroup>
+
 </Project>
