--- a/net-core/Lib.zookeeper/Lib.zookeeper.csproj
+++ b/net-core/Lib.zookeeper/Lib.zookeeper.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="ZooKeeperNetEx" Version="3.4.12" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Lib\Lib.csproj" />
+  </ItemGroup>
+
 </Project>
